--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,8 +11,9 @@
           <h3><%= link_to truncate(recipe.name), recipe_path(recipe) %></h3>
           <p><%= truncate(recipe.description, length: 150) %></p>
           <p>
-            <%= link_to "Edit", edit_recipe_path(recipe), class: "btn btn-default" %>
-            <%= link_to "Delete", recipe_path(recipe), data: {
+            <%= link_to "Favorite", edit_recipe_path(recipe), class: "btn btn-primary" %>
+            <%= link_to "Edit", edit_recipe_path(recipe), class: "btn btn-primary" %>
+            <%= link_to "Delete", recipe_path(recipe), class: "btn btn-primary", data: {
               confirm: "Are you sure you want to delete: #{recipe.name}?",
             }, method: :delete %>
           </p>
