--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to Meal Planner</h1>
+
+<h2>Authenticate via one of the social networks to get started.</h2>
+<ul class="nav navbar-nav">
+  <li><%= link_to 'Twitter', '/auth/twitter' %></li>
+</ul>
