--- a/app/views/favorite_meals/index.html.erb
+++ b/app/views/favorite_meals/index.html.erb
@@ -7,9 +7,8 @@
     <div class="favorite">
       <div class="thumbnail">
         <div class="caption">
-          <h3><%= link_to truncate(recipe.name), recipe_path(recipe) %></h3>
-          <p><%= truncate(recipe.description, length: 150) %></p>
-        
+          <div><%= favorite.name %> </div>
+          <div><%= favorite.description %> </div>
         </div>
       </div>
     </div>
